--- a/src/Css/dashboard.module.css
+++ b/src/Css/dashboard.module.css
@@ -11,23 +11,40 @@ body {
 }
 
 .header {
-    border-radius: 50px;
+    border-radius: 35px;
     width: 100%;
-    background-color: #1b1b19e5;
+    background-color: #ff8400;
     color: white;
-    padding: 20px;
+    padding: 10px;
     text-align: center;
-    margin-bottom: 50px;
+    margin: 10px;
 }
 
 .dashboardContent {
+    height: 700px;
     display: flex;
     flex-direction: column;
-    width: 80%;
-    background-color: white;
-    padding: 50px;
+    background-color: #d6d0d0;
+    padding: 30px;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.dashboardContent button {
+    border: none;
+    display: flex;
+    flex-direction: row;
+    padding: 10px 20px;
+    border-radius: 10px;
+    color: white;
+    background-color: hsl(260, 82%, 56%);
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.3s;
+    margin-bottom: 10px;
+}
+
+.dashboardContent button:hover {
+    background-color: hsl(260, 82%, 46%);
+    transform: translateY(-11px);
 }
 
 .userInfo {
@@ -40,29 +57,27 @@ body {
     flex: 1;
     margin: 0 10px;
     padding: 30px;
-    background-color: #eee;
+    background-color: #ccc5c5;
     border-radius: 5px;
-    text-align: center;
+    text-align: left;
 }
 
 .statistics {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .statistics div {
     flex: 1;
-    margin: 0 10px;
-    padding: 20px;
-    background-color: #eee;
+    padding: 0.5vh;
+    background-color: #c9c3c3;
     border-radius: 5px;
-    text-align: center;
 }
 
-.statistics button {
-    padding: 5px 30px;
-    border-radius: 10px;
-    color: white;
-    background-color: hsl(0, 0%, 27%);
+.btns {
+    display: flex;
+    flex-direction: row;
+    width: fit-content;
+    gap: 10px;
 }
