--- a/src/Css/login.module.css
+++ b/src/Css/login.module.css
@@ -1,29 +1,24 @@
-.root {
+body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: white;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    background-color: #000000;
 }
 
 .container {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 50vh;
-    width: 50vh;
-    background: #333;
-    border-radius: 30px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    width: 500px;
 }
 
-form {
+.form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: #444;
+    background: #556569;
     padding: 20px 50px 20px 30px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -62,9 +57,11 @@ input::placeholder {
     border: none;
     border-radius: 10px;
     cursor: pointer;
-    transition: background-color 0.3s;
+    transition: background-color 0.3s, transform 0.4s;
 }
 
 .btn:hover {
     background-color: #434190;
+    transform: translateY(-5px);
+
 }
